[tool.poetry]
name = "arcaflow-plugin-stressng"
version = "0.1.0"
description = "arcaflow plugin for stressng"
authors = ["arcalot"]
license = "Apache-2.0+GPL-2.0-only"
readme = "README.md"
packages = [{include = "arcaflow_plugin_stressng"}]

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.23.4"
scipy = "^1.9.3"
pyyaml = "^6.0"
arcaflow-plugin-sdk = "^0.9.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
