[tool.poetry]
name = "arcaflow-plugin-stressng"
version = "0.1.0"
description = "arcaflow plugin for stressng"
authors = ["arcalot"]
license = "Apache-2.0+GPL-2.0-only"
readme = "README.md"
packages = [{include = "stressng_plugin.py", from="."}]

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.23.4"
scipy = "^1.9.3"
pyyaml = ">=5.4,<6.0"
arcaflow-plugin-sdk = "^0.10.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
