[tool.poetry]
name = "arcaflow-plugin-stressng"
version = "0.1.0"
description = "arcaflow plugin for stressng"
authors = ["arcalot"]
license = "Apache-2.0+GPL-2.0-only"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.23.4"
scipy = "^1.9.3"
pyyaml = ">=5.4,<6.0"
arcaflow-plugin-sdk = "^0.10.1"

[tool.poetry.dev-dependencies]
docformatter = "^1.5.0"
autoflake = "^1.7.6"
pydocstyle = "^6.1.1"
black = "^22.10.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
